# pydoc-md

./: .gitignore  README.md  pyproject.toml
pydoc_md/: parser.py
pydocmd/: __main__.py  generator.py  parser.py
tests/: test_main.py
tests/foo/: __init__.py  __init__.pyi
