[tool.poetry]
name = "pydoc-md"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
license = "MIT"
packages = [ 
    {include = "pydoc_md"}
]

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.5.1"
docstring_parser = "^0.7.2"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pydoc-md = "pydoc_md.__main__:main"